Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

Thu Jan 20 01:34:00 2005  Tim Janik  <timj@gtk.org>

	* standardsaturator.idl: move saturator into the distortion submenu.

Thu Jan 20 01:21:24 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Don't assume that in the attack phase,
	the envelope rate is always positive, and in the decay phase always
	negative. Instead, look at the offsets of adjacent envelope points to
	figure out the sign for rate. Fixes: problems with freepats fretless
	bass envelope and probably others.

Fri Jan  7 00:44:24 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Implemented chunk specific envelope
	code, inspired by timidity. Currently, its not yet finished: some
	envelopes from the FreePats set are treated the way I think they are
	correct (Piano), some are not (FretlessBass).

Sun Jan  2 15:30:19 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.idl:
	* standardguspatchenvelope.cc: Retrieve envelope from chunk specific
	xinfos string.

Sun Jan  2 12:19:36 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Fixed code of the last change.

Sat Jan  1 15:38:43 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am:
	* Makefile.plugins: Added standardguspatchenvelope.idl.

	* standardguspatchenvelope.idl:
	* standardguspatchenvelope.cc: The GUS Patch format is a mono format,
	so we only need a mono input for envelope. Moved to the Misc category.

Fri Dec 31 14:19:21 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.idl:
	* standardguspatchenvelope.cc: Added preliminary implementation of the
	envelope for the GUS Patches. This version doesn't yet use the data
	from the wave chunks. However, it eliminates clicks at the start/end